test/success/std/globals/main.sk
module Main {

let FOO : Int = 4;

fn main() {
    let a = 5 + FOO;
    println(a);
}

}