test/errors/coroutine/coroutine_body_not_function_call/main.sk
module Main {

fn main() {
    let x = 5;
    let coro = co x; // Error: Coroutine body must be a function call
}

}